# dluxshera-sandbox

./: .gitignore  README.md  dLuxShera_Refactor_Working_Plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
Classes/: __init__.py  inference.py  modeling.py  oneoverf.py  optical_systems.py  optimization.py  plotting.py  utils.py
Examples/: AstrometryRetrieval-ContrastSweep.py  AstrometryRetrieval-DefocusTest.py  AstrometryRetrieval-ImageTrain.py  AstrometryRetrieval-Loop.py  AstrometryRetrieval-NZernikeTest.py  AstrometryRetrieval-NoNoise.py  AstrometryRetrieval-OneOverF.py  AstrometryRetrieval-PointingError.py  AstrometryRetrieval-ShotNoise.py  AstrometryRetrieval.py  AstrometryRetrieval_DPMask_Writing.py  AstrometryRetrieval_Secondary-ThreePlane.py  CallSims-AR-DT.py  CallSims-AR-SN.py  Propagation_Testing.py  oneoverf_testing.py
devtools/: README.md  check_no_examples_imports.py  check_no_src_imports.py  generate_context_snapshot.py  introspection.py  print_tree.py
docs/: README.md  modeling_overview.md
examples/: README.md
tests/: conftest.py  helpers.py  test_binder_diagnostics.py  test_binder_dir.py  test_binder_leaf_access.py  test_binder_leaf_index.py  test_binder_namespace.py  test_binder_shared_behaviour.py  test_binder_smoke.py  test_demo_canonical_astrometry.py  test_eigen_theta_map.py  test_fim_theta.py  test_generate_context_snapshot.py  test_image_nll_bridge.py  test_imports.py  test_inference_api.py  test_inference_helpers.py  test_loss_canonical.py  test_losses.py  test_model_builder.py  test_modeling_components.py  test_plotting.py  (+12 more)
(+108 files in other folders)
